welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:5: error: not found: value c
  while (c!=j && i!=num) {
         ^